syntax = "proto3";
package web_api;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/lexatic/web-backend/protos/lexatic-backend";

message AuthenticateRequest {
    string email = 1;
    string password = 2;
}

message BaseResponse {
    int32 code = 1;
    bool success = 2;
    map<string, string> data = 3;
}

message RegisterUserRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}


message UserInfo {
    uint64 id = 1 [jstype = JS_STRING];
    string name = 2;
    string email =3;
}

message Token {
    uint64 id = 1 [jstype = JS_STRING];
    string token =2 ;
    string tokenType=3;
    bool isExpired = 4;
}

message OrganizationRole {
    uint64 id = 1 [jstype = JS_STRING];
    uint64 organizationId = 2 [jstype = JS_STRING];
    string role = 3;
    string organizationName = 4;
}

message ProjectRole {
    uint64 id = 1 [jstype = JS_STRING];
    uint64 projectId = 2 [jstype = JS_STRING];
    string role = 3;
    string projectName = 4;
}

message Authentication {
    UserInfo user = 1;
    Token token = 2;
    optional OrganizationRole organizationRole = 3;
    repeated ProjectRole projectRoles = 4;
    
}



message AuthenticateResponse {
    int32 code = 1;
    bool success = 2;
    Authentication data = 3;
}

message ForgotPasswordRequest {
    string email = 1;
}

message ChangePasswordRequest{
    string oldPassword = 1;
    string password = 2;
}

message VerifyTokenRequest {
    string tokenType = 1;
    string token = 2;
}

message VerifyTokenResponse {
    int32 code = 1;
    bool success = 2;
    Token data = 3;
}
message AuthorizeRequest{}
message GetUserRequest{}
message GetUserResponse{
    int32 code = 1;
    bool success = 2;
    UserInfo data = 3;
}

message UpdateUserRequest{
    optional string email = 1;
    optional string name = 2;
}
message UpdateUserResponse{
    int32 code = 1;
    bool success = 2;
    UserInfo data = 3;
}

message SocialAuthenticationRequest {
    string state = 1;
    string code =2;
}
message GetUsersRequest {
    uint32 offset = 1;
    uint32 limit = 2;
}

message GetUsersResponse {
    int32 code = 1;
    bool success = 2;
    repeated User users = 3;
    uint64 totalCount = 4;
}

message User {
    uint64 Id = 1 [jstype = JS_STRING];
    string Name  = 2;
    string Email = 3;
    OrganizationRole OrganizationRole = 4;
    repeated UserProject projects = 5;
    google.protobuf.Timestamp createdDate = 6;
}

message UserProject {
    uint64 ProjectId = 1 [jstype = JS_STRING];
    string ProjectName = 2;
    string ProjectDescription = 3;
    string status =5;
    google.protobuf.Timestamp createdDate = 6;

    uint64 UserProjectRoleId = 7 [jstype = JS_STRING];
    string ProjectRole = 8;
}

service AuthenticationService {
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
    rpc RegisterUser(RegisterUserRequest) returns (AuthenticateResponse);
    rpc Authorize(AuthorizeRequest) returns (AuthenticateResponse);

    //
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
    rpc ForgotPassword(ForgotPasswordRequest) returns (BaseResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (BaseResponse);

    //
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);

    rpc Linkedin(SocialAuthenticationRequest) returns (AuthenticateResponse);
    rpc Google(SocialAuthenticationRequest) returns (AuthenticateResponse);
    rpc Github(SocialAuthenticationRequest) returns (AuthenticateResponse);


}



//
//  Organization service
//




message CreateOrganizationRequest {
string organizationName = 1;
string organizationSize = 2;
string organizationIndustry = 3;
optional string organizationContact = 4;
}

message UpdateOrganizationRequest {
    uint64 organizationId = 1 [jstype = JS_STRING];
    optional string organizationName = 2;
    optional string organizationIndustry = 3;
    optional string organizationContact = 4;
}


message Organization {
    uint64 id = 1 [jstype = JS_STRING];
    string name = 2;
    string description = 3;
    string industry = 4;
    string contact = 5;
    string size = 6;
}

message GetOrganizationRequest {}

message GetOrganizationResponse {
    int32 code = 1;
    bool success = 2;
    Organization data = 3;
    OrganizationRole role = 4;
}

message CreateOrganizationResponse {
    int32 code = 1;
    bool success = 2;
    Organization data = 3;
    OrganizationRole role = 4;
}

message UpdateBillingInformationRequest {
    enum BillingInterval {
        Annually = 0;
        Monthly = 1;
    }
    string paymentMethod = 1;
    BillingInterval billingInterval = 2;
    string taxInformation = 3;
    string address = 4;
    string email = 5;
}

service OrganizationService {
    rpc CreateOrganization(CreateOrganizationRequest) returns (CreateOrganizationResponse);
    rpc GetOrganization(GetOrganizationRequest) returns (GetOrganizationResponse);
    rpc UpdateOrganization(UpdateOrganizationRequest) returns (BaseResponse);
    rpc UpdateBillingInformation(UpdateBillingInformationRequest) returns (BaseResponse);
}



//
// Project Service
//
//

message CreateProjectRequest {
    string projectName = 1;
    optional string projectDescription = 2;
}


message CreateProjectResponse {
    int32 code = 1;
    bool success = 2;
    Project data = 3;
}

message UpdateProjectRequest {
    uint64 projectId = 1 [jstype = JS_STRING];
    optional string projectName = 2;
    optional string projectDescription = 3;
}


message UpdateProjectResponse {
    int32 code = 1;
    bool success = 2;
    Project data = 3;
}


message GetProjectRequest {
    uint64 projectId = 1 [jstype = JS_STRING];
    optional bool getInActive = 2;
}

message GetProjectResponse {
    int32 code = 1;
    bool success = 2;
    Project data = 3;
}

message ProjectMember {
    uint64 id = 1 [jstype = JS_STRING];
    string name = 2;
    string email = 3;
    string role = 4;
}

message Project {
    uint64  id = 1 [jstype = JS_STRING];
    string name = 2;
    string description = 3;
    repeated ProjectMember members = 4;
    string status =5;
    google.protobuf.Timestamp createdDate = 6;

}

message GetAllProjectResponse {
    int32 code = 1;
    bool success = 2;
    repeated Project data = 3;
}

message AddUsersToProjectRequest {
    string email = 1;
    string role = 2;
    repeated uint64 projectIds = 3 [jstype = JS_STRING];
}

message ArchiveProjectRequest {
    uint64 id = 1 [jstype = JS_STRING];
}

message ArchiveProjectResponse {
    int32 code = 1;
    bool success = 2;
    uint64 id = 3[jstype = JS_STRING];
}

message AddUsersToProjectResponse {
    int32 code = 1;
    bool success = 2;
    repeated Project data = 3;
}

service ProjectService {
    rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);
    rpc UpdateProject(UpdateProjectRequest) returns (UpdateProjectResponse);
    rpc GetProject(GetProjectRequest) returns (GetProjectResponse);
    rpc GetAllProject(google.protobuf.Empty) returns (GetAllProjectResponse);
    rpc AddUsersToProject(AddUsersToProjectRequest) returns (AddUsersToProjectResponse);
    rpc ArchiveProject(ArchiveProjectRequest) returns (ArchiveProjectResponse);
}



//
//
//
//

message LeadCreationRequest {
    string email =1;
}
service LeadService {
    rpc CreateLead(LeadCreationRequest) returns (BaseResponse);
}
